// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-badge should render with _label="**Te**xt" 1`] = `
<kol-badge class="kol-badge">
  <template shadowrootmode="open">
    <span style="background-color: #000; color: #959595;">
      <span class="kol-span-wc">
        <span>
          <span class="md span-label">
            <strong>
              Te
            </strong>
            xt
          </span>
          <span aria-hidden="true" class="span-label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _color="#000000" 1`] = `
<kol-badge class="kol-badge">
  <template shadowrootmode="open">
    <span style="background-color: #000; color: #959595;">
      <span class="kol-span-wc">
        <span>
          <span class="md span-label">
            Text
          </span>
          <span aria-hidden="true" class="span-label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _icons="codicon codicon-home" _color="#000000" 1`] = `
<kol-badge class="kol-badge">
  <template shadowrootmode="open">
    <span style="background-color: #000; color: #959595;">
      <span class="kol-span-wc">
        <span>
          <kol-icon _icons="codicon codicon-home" _label="" class="icon left"></kol-icon>
          <span class="md span-label">
            Text
          </span>
          <span aria-hidden="true" class="span-label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" _icons="codicon codicon-home" 1`] = `
<kol-badge class="kol-badge">
  <template shadowrootmode="open">
    <span style="background-color: #000; color: #959595;">
      <span class="kol-span-wc">
        <span>
          <kol-icon _icons="codicon codicon-home" _label="" class="icon left"></kol-icon>
          <span class="md span-label">
            Text
          </span>
          <span aria-hidden="true" class="span-label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;

exports[`kol-badge should render with _label="Text" 1`] = `
<kol-badge class="kol-badge">
  <template shadowrootmode="open">
    <span style="background-color: #000; color: #959595;">
      <span class="kol-span-wc">
        <span>
          <span class="md span-label">
            Text
          </span>
          <span aria-hidden="true" class="span-label" hidden=""></span>
        </span>
      </span>
    </span>
  </template>
</kol-badge>
`;
